--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" >
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <title>安全多方计算国际论坛2019</title>
+    <title>算法软硬件架构设计与实现论坛2019</title>
 </head>
 <body>
     <div >
@@ -54,27 +54,27 @@
                                     <li class="submenu">
                                            <a href="introduction.html">QPQC论坛</a>
                                              <ul class="sub">
-                                                 <li><a href="introduction.html">论坛介绍</a></li>
-                                                 <li><a href="schedule.html">论坛日程</a></li>
-                                                 <li><a href="about.html">论坛注册</a></li>
+                                                 <li><a href="#">论坛介绍</a></li>
+                                                 <li><a href="#">论坛日程</a></li>
+                                                 <li><a href="#">论坛注册</a></li>
                                              </ul>
                                     </li>
                                 
                                     <li class="submenu">
                                            <a href="introduction.html">CSAC会议</a>
                                              <ul class="sub">
-                                                 <li><a href="introduction.html">论坛介绍</a></li>
-                                                 <li><a href="schedule.html">论坛日程</a></li>
-                                                 <li><a href="about.html">论坛注册</a></li>
+                                                 <li><a href="#">会议介绍</a></li>
+                                                 <li><a href="#">会议日程</a></li>
+                                                 <li><a href="#">会议注册</a></li>
                                              </ul>
                                     </li>
                                 
                                     <li class="submenu">
                                            <a href="introduction.html">CC会议</a>
                                              <ul class="sub">
-                                                 <li><a href="introduction.html">论坛介绍</a></li>
-                                                 <li><a href="schedule.html">论坛日程</a></li>
-                                                 <li><a href="about.html">论坛注册</a></li>
+                                                 <li><a href="#">会议介绍</a></li>
+                                                 <li><a href="#">会议日程</a></li>
+                                                 <li><a href="#">会议注册</a></li>
                                              </ul>
                                     </li>
                             </ul>
@@ -84,7 +84,7 @@
         </header>        
         <div class="container">
             <div id="main">
-                <p>算法软硬件架构设计与实现论坛日程-2019</p>
+                <p>算法软硬件架构设计与实现论坛-2019</p>
                 <p>[2019年9月28日 - 2019年9月29日]</p>
                 <p>桂林市金鸡路1号·桂林电子科技大学金鸡岭校区<br/>10教516室</p>
                 <a href="https://j.map.baidu.com/b0ZKP">
