--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     </li>
                                 
                                     <li class="submenu">
-                                           <a href="introduction.html">CC会议</a>
+                                           <a href="introduction.html">CC国际会议</a>
                                              <ul class="sub">
                                                  <li><a href="#">会议介绍</a></li>
                                                  <li><a href="#">会议日程</a></li>
