--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -136,11 +136,14 @@
  <tr><td>&nbsp;</td><td>14:00 - 17:30</td><td>自由论坛时间</td><td>蒋林智</td></tr>
 </tbody></table>
 	    </br></br>
-   <div id="up2">
-            <a href="SHDIpage.html">
-                <i class="fa fa-angle-double-up  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
-            </a>
-    </div>
+     <div id="buttons">
+                    <a id="up1" href="SHDIpage.html" >
+                        <i class="fa fa-angle-double-up fa-3x" style="color:rgb(81,125,207)"aria-hidden="true"></i>
+                    </a>
+                    <a  id="down2" href="SHDIregister.html">
+                        <i class="fa fa-angle-double-down fa-3x"style="color:rgb(81,125,207)"aria-hidden="true"></i>
+                    </a>
+     </div>
     <script>
         let iconDown=document.getElementById('up2');
             
