--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -89,7 +89,7 @@
             <div class="introdution">
             <div id="theme">
                 <p style="text-indent:2em ">随着网络空间安全、人工智能和云计算等领域的快速发展，学术界和工业界构造了大量的理论和应用方案；同时，工业界和用户对相关落地实现系统的需求也在不断快速增长；因此，必须解决相关方案和算法的软件和硬件实现问题；而软件设计理论的逐渐成熟和硬件设计与实现技术的快速发展和产品化，为解决上述问题提供了良好的基础和契机。<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;本届论坛将围绕着算法，特别是密码算法的软硬件结构设计与实现展开探讨和交流。论坛将于2019年9月28日-2019年9月29日在桂林举办，由桂林电子科技大学 计算机与信息安全学院承办。论坛邀请了来自香港城市大学、深圳纽创信安科技公司、清华大学、中科院信息工程研究所、武汉大学、杭州加速云科技公司、Intel中国有限公司、百度中国XLab等多位从事软硬件算法设计与实现的专家，将就相关的问题给出14个特邀报告。热烈欢迎国内外高校、研究所、企业界的老师、同仁和研究生等参加论坛交流和讨论。
+                    &nbsp; &nbsp; &nbsp; &nbsp;本届论坛将围绕着算法，特别是密码算法的软硬件结构设计与实现展开探讨和交流。论坛将于2019年9月28日-2019年9月29日在桂林举办，由桂林电子科技大学 计算机与信息安全学院承办。论坛邀请了来自香港城市大学、深圳纽创信安科技公司、清华大学、中科院信息工程研究所、武汉大学、杭州加速云科技公司、Intel中国有限公司、百度安全实验室等多位从事软硬件算法设计与实现的专家，将就相关的问题给出14个特邀报告。热烈欢迎国内外高校、研究所、企业界的老师、同仁和研究生等参加论坛交流和讨论。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div> 
