--- a/introduction.html
+++ b/introduction.html
@@ -159,11 +159,11 @@
                     蒋林智<br/><br/>
                     <p class="organization">论坛承办单位<br/></p>
                     浙江大学 网络空间安全研究中心<br/><br/>
-                    <p class="organization">论坛协办单位<br/></p>
+<!--                     <p class="organization">论坛协办单位<br/></p>
                     University of Surrey SSG <br/>
                     中国密码学会 密码数学理论专业委员会<br/>
                     中国保密学会 隐私保护专委会<br/><br/>
-                    </p>
+                    </p> -->
                     <p class="organization">会议举办地点<br/></p>
                     浙江大学邵逸夫科学馆<br/>
                     <a href="https://j.map.baidu.com/b0ZKP">
