--- a/SHDIregister.html
+++ b/SHDIregister.html
@@ -98,7 +98,7 @@
 
                     <tr>
                         <td style="width: 41%">收款人信息如下：</td>
-                        <td>(转账时请注明单位与姓名)</td>
+                        <td>(转账时请注明：单位、姓名和单位统一社会信用代码)</td>
                     </tr>
                     <tr>
                         <td>户&nbsp; &nbsp;&nbsp;&nbsp;名：</td>
