--- a/SHDIpage.html
+++ b/SHDIpage.html
@@ -99,8 +99,8 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-<!--                         <p class="organization">论坛组委会<br/></p>
-                        张景中(待定)   刘建伟   马建峰   荆继武   唐绍华   张玉清   冯荣权   张焕国   孔凡玉   陈光喜<br/><br/> -->
+                        <p>论坛组委会<br/></p>
+                        张景中(待定)   刘建伟   马建峰   荆继武   唐绍华   张玉清   冯荣权   张焕国   孔凡玉   陈光喜<br/><br/>
                         <p class="organization">论坛组织<br/></p>
                         蒋林智（University of Surrey）  丁勇（桂林电子科技大学）<br/><br/>
                         <p class="organization">论坛承办单位<br/></p>
