--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -108,7 +108,7 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>日期</th><th>时间</th><th>报告</th><th报告人</th><th></th>主持人</tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>日期</th><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th> </tr></thead><tbody>
  <tr><td>9月27日</td><td>&nbsp;14:00 - 20:00</td><td>论坛注册及报到&nbsp;&nbsp;桂林百悦大酒店大堂</td><td>&nbsp;</td></tr>
  <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>9月28日</td><td>&nbsp;8:00 - 8:30</td><td>开幕 合影</td><td>&nbsp;</td></tr>
