--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -98,10 +98,14 @@
 	.tableizer-table td {
 		padding: 4px;
 		margin: 3px;
+		max-width: 500;
 		border: 1px solid #CCC;
 	}
 	.tableizer-table th {
-		background-color: #104E8B; 
+		background-color: #104E8B;
+		padding: 4px;
+		margin: 3px;
+		max-width: 500;
 		color: #FFF;
 		font-weight: bold;
 		text-align: center;
