--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" media="screen" >
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <title>算法软硬件架构设计与实现论坛2019</title>
+    <title>Digital Future Research Center-数字未来研究院</title>
 </head>
 <body>
     <div >
@@ -84,9 +84,7 @@
         </header>        
         <div class="container">
             <div id="main">
-                <p>算法软硬件架构设计与实现论坛-2019</p>
-                <p>[2019年9月28日 - 2019年9月29日]</p>
-                <p>桂林市金鸡路1号·桂林电子科技大学金鸡岭校区<br/>10教516室</p>
+                <p>研究院简介：主要从事数字空间领域相关问题的研究，以数学理论为基础，涉及量子、电子、通信、人工智能和数据等相关领域。研究院将聘请国内外相关领域的学者组成顾问团队，指导研究院的发展</p>
                 <a href="https://map.baidu.com/search/%E6%A1%82%E6%9E%97%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6(%E9%87%91%E9%B8%A1%E5%B2%AD%E6%A0%A1%E5%8C%BA)/@12283415.670365062,2892976.509075,18.02z?querytype=s&da_src=shareurl&wd=%E6%A1%82%E6%9E%97%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6(%E9%87%91%E9%B8%A1%E5%B2%AD%E6%A0%A1%E5%8C%BA)&c=142&src=0&pn=0&sug=0&l=18&b=(12282586.42812713,2892526.34900298;12284244.912602993,2893426.6691470197)&from=webmap&biz_forward=%7B%22scaler%22:1,%22styles%22:%22pl%22%7D&device_ratio=1">
                     <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                 </a>
