--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
         </header>        
         <div class="container">
             <div id="main">
-            <p>研究院简介：主要从事数字空间领域相关问题的研究，以数学理论为基础，涉及量子、电子、通信、人工智能和数据等相关领域。</p>
-                          <p>研究院将聘请国内外相关领域的学者组成顾问团队，指导研究院的发展。</p>
+            <p>研究院简介：主要从事数字空间领域相关问题的研究，以数学理论为基础，涉及量子、电子、通信、人工智能和数据等相关领域。研究院将聘请国内外相关领域的学者组成顾问团队，指导研究院的发展。</p>
       
                 
 <!--                 <p>安全多方计算国际论坛-2019</p>
