--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a href="https://j.map.baidu.com/b0ZKP">
                     <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
                 </a> -->
-            </div>
+           <!--  </div>
             <div id="icon-down" class="icon-down">
                 <a id="down"   href="SHDIpage.html">
                     <i class="fa fa-angle-double-down  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>    
-   <!--   <script>
+     <script>
         let iconDown=document.getElementById('icon-down');
             //跨浏览器兼容事件处理器
         var addHandler=function(element,type,handler){
