--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -113,33 +113,32 @@
 	}
 </style>
 <table class="tableizer-table">
-
 <thead><tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr></thead><tbody>
  <tr><td>9月27日<br>14:00 - 20:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;桂林百悦大酒店大堂</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;8:00 - 8:30</td><td>开幕 合影</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>张景中</td></tr>
- <tr><td>&nbsp;9:20 - 10:00</td><td>从功能需求到RTL</td><td>傅延增</td></tr>
+ <tr><td colspan="4">9月28日&nbsp;(会议地点：金鸡岭校区  10教516室)</td></tr>
+ <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td><td>&nbsp;</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>张景中</td><td>待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:00</td><td>从功能需求到RTL</td><td>傅延增</td><td rowspan="2">刘建伟</td></tr>
  <tr><td>&nbsp;10:00- 10:40</td><td>国产密码算法软件引擎的安全挑战</td><td>林璟锵</td></tr>
- <tr><td>10:40 - 10:50</td><td>茶歇</td><td>&nbsp;</td></tr>
- <tr>><td>10:50 - 11:30</td><td>基于PUF的可信平台模块TPM 根密钥实现方法</td><td>赵波</td></tr>
+ <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
+ <tr><td>10:50 - 11:30</td><td>基于PUF的可信平台模块TPM 根密钥实现方法</td><td>赵波</td><td rowspan="2">冯荣权</td></tr>
  <tr><td>11:30 - 12:10</td><td>ZUC算法FPGA优化实现</td><td>杨亚涛</td></tr>
- <tr><td>12:10</td><td>午餐（用餐地点: 百悦酒店餐厅）</td><td></td></tr>
- <tr><td>14:00 - 14:40</td><td>High Performance and Hardware Efficient Computer Arithmetic for Post Quantum Cryptography</td><td>刘伟强</td></tr>
+ <tr><td colspan="4">午餐（用餐地点: 百悦酒店餐厅）</td><td></td></tr>
+ <tr><td>14:00 - 14:40</td><td>High Performance and Hardware Efficient Computer Arithmetic for Post Quantum Cryptography</td><td>刘伟强</td><td rowspan="2">陈光喜</td></tr>
  <tr><td>14:40 - 15:20</td><td>基于FPGA的密码算法设计方法</td><td>邬刚</td></tr>
- <tr><td>15:20 - 15:40</td><td>茶歇</td><td>&nbsp;</td></tr>
- <tr><td>15:40 - 16:20</td><td>基于FPGA的真随机数发生器的设计</td><td>杨博翰</td></tr>
+ <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
+ <tr><td>15:40 - 16:20</td><td>基于FPGA的真随机数发生器的设计</td><td>杨博翰</td><td rowspan="2">待定</td></tr>
  <tr><td>16:20 - 17:00</td><td>《下一代可信技术：MesaTEE通用安全计算框架》</td><td>周吉文</td></tr>
- <tr>><td>17:00</td><td>晚餐（用餐地点: 百悦酒店餐厅）</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
- <tr><td>&nbsp;8:00 - 8:40</td><td>Spectral Arithmetic: Modular Arithmetic and Architecture in Public-key Cryptography</td><td>张泽松</td></tr>
+ <tr><td colspan="4">晚餐（用餐地点: 百悦酒店餐厅）</td></tr>
+ <tr><td colspan="4">9月29日&nbsp;(会议地点：金鸡岭校区  10教516室)</td></tr>
+ <tr><td>&nbsp;8:00 - 8:40</td><td>Spectral Arithmetic: Modular Arithmetic and Architecture in Public-key Cryptography</td><td>张泽松</td><td rowspan="3">唐韶华</td></tr>
  <tr><td>&nbsp;8:40 - 9:20</td><td>SEip：片上安全根的设计和应用</td><td>樊俊峰</td></tr>
  <tr><td>&nbsp;9:20 - 10:00</td><td>硬件安全与硬件辅助系统安全</td><td>张吉良</td></tr>
- <tr><td>10:00 - 10:20</td><td>茶歇</td><td>&nbsp;</td></tr>
- <tr><td>10:20 - 11:00</td><td>面向掩码型密码实现的效率优化研究</td><td>邱爽</td></tr>
+ <tr><td>10:00 - 10:20</td><td colspan="3">茶歇</td></tr>
+ <tr><td>10:20 - 11:00</td><td>面向掩码型密码实现的效率优化研究</td><td>邱爽</td><td rowspan="2">待定</td></tr>
  <tr><td>11:00 - 11:40</td><td>面向白盒安全的分组密码算法SWAN设计</td><td>龚征</td></tr>
- <tr><td>11:40</td><td>午餐（用餐地点: 百悦酒店餐厅）</td><td></td></tr>
- <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td>蒋林智</td></tr>
+ <tr><td colspan="4">午餐（用餐地点: 百悦酒店餐厅）</td><td></td></tr>
+ <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">蒋林智</td></tr>
 </tbody></table>
 	    </br></br>
    <div id="up2">
