--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -113,9 +113,10 @@
 	}
 </style>
 <table class="tableizer-table">
-<thead><tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">注册和报道</th></tr></thead><tbody>
  <tr><td>9月27日<br>14:00 - 20:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;桂林百悦大酒店大堂</td></tr>
  <tr><td colspan="4">9月28日&nbsp;(会议地点：金鸡岭校区  10教516室)</td></tr>
+ <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
  <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td></tr>
  <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>张景中</td><td>待定</td></tr>
  <tr><td>&nbsp;9:20 - 10:00</td><td>从功能需求到RTL</td><td>傅延增</td><td rowspan="2">刘建伟</td></tr>
