--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div id="navbar-collapse" class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
                                     <li><a href="index.html">
-                                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> 主页</a></li>
+                                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                     <li class="submenu">
                                            <a href="SHDIpage.html">SHDI论坛</a>
                                              <ul class="sub">
