--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -147,16 +147,19 @@
                 <i class="fa fa-angle-double-up  fa-3x" style="color:rgb(81,125,207)" aria-hidden="true"></i>
             </a>
     </div> -->
-	<div class="main2">
-                 <div id="buttons">
-                    <a id="up1" href="SHDIpage.html" >
-                        <i class="fa fa-angle-double-up fa-3x" style="color:rgb(81,125,207)"aria-hidden="true"></i>
-                    </a>
-                    <a  id="down2" href="SHDIregister.html">
-                        <i class="fa fa-angle-double-down fa-3x"style="color:rgb(81,125,207)"aria-hidden="true"></i>
-                    </a>
-                </div>
+	<div id="introdution">
+		<div class="main2">
+                 	<div id="buttons">
+                   	 <a id="up1" href="SHDIpage.html" >
+                       		 <i class="fa fa-angle-double-up fa-3x" style="color:rgb(81,125,207)"aria-hidden="true"></i>
+                    	</a>
+                   	 <a  id="down2" href="SHDIregister.html">
+                        	<i class="fa fa-angle-double-down fa-3x"style="color:rgb(81,125,207)"aria-hidden="true"></i>
+                    	</a>
+                	</div>
+		</div>		
 	</div>
+
     <script>
 //         let iconDown=document.getElementById('up2');
             
