--- a/CSACpage.html
+++ b/CSACpage.html
@@ -37,7 +37,7 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                     <li class="submenu">
-                                           <a href="CSACpage.html">CSAC国际研讨会</a>
+                                           <a href="CSACpage.html">CSAC会议</a>
                                              <ul class="sub">
                                                  <li><a href="CSACpage.html">会议介绍</a></li>
                                                  <li><a href="CSACplan.html">会议日程</a></li>
