--- a/CSACpage.html
+++ b/CSACpage.html
@@ -37,11 +37,11 @@
                                     <li><a href="index.html">
                                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                     <li class="submenu">
-                                           <a href="CSACpage.html">CSAC会议</a>
+                                           <a href="SHDIpage.html">SHDI论坛</a>
                                              <ul class="sub">
-                                                 <li><a href="CSACpage.html">会议介绍</a></li>
-                                                 <li><a href="CSACplan.html">会议日程</a></li>
-                                                 <li><a href="CSACregister.html">会议注册</a></li>
+                                                 <li><a href="CSACpage.html">论坛介绍</a></li>
+                                                 <li><a href="CSACplan.html">论坛日程</a></li>
+                                                 <li><a href="CSACregister.html">论坛注册</a></li>
                                              </ul>
                                     </li>
                                 
