--- a/introduction.html
+++ b/introduction.html
@@ -65,9 +65,9 @@
                                     <li class="submenu">
                                            <a href="introduction.html">CSAC会议</a>
                                              <ul class="sub">
-                                                 <li><a href="#">论坛介绍</a></li>
-                                                 <li><a href="#">论坛日程</a></li>
-                                                 <li><a href="#">论坛注册</a></li>
+                                                 <li><a href="#">会议介绍</a></li>
+                                                 <li><a href="#">会议日程</a></li>
+                                                 <li><a href="#">会议注册</a></li>
                                              </ul>
                                     </li>
                                 
