--- a/CSACplan.html
+++ b/CSACplan.html
@@ -156,7 +156,7 @@
 		</div>		
 
 
-    <script>
+    <!-- <script>
 //         let iconDown=document.getElementById('up2');
             
 //             //跨浏览器兼容事件处理器
@@ -205,7 +205,7 @@
         
         addHandler(down2,"mouseout",()=>down2.style.border="");
         window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
-    </script>
+    </script> -->
 
 </body>
 </html>
