--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -64,11 +64,11 @@
                                     </li>
                                 
                                     <li class="submenu">
-                                           <a href="introduction.html">CSAC会议</a>
+                                           <a href="CSACpage.html">CSAC会议</a>
                                              <ul class="sub">
-                                                 <li><a href="#">论坛介绍</a></li>
-                                                 <li><a href="#">论坛日程</a></li>
-                                                 <li><a href="#">论坛注册</a></li>
+                                                <li><a href="CSACpage.html">会议介绍</a></li>
+                                                 <li><a href="CSACplan.html">会议日程</a></li>
+                                                 <li><a href="CSACregister.html">会议注册</a></li>
                                              </ul>
                                     </li>
                                 
