--- a/CSACplan.html
+++ b/CSACplan.html
@@ -128,7 +128,7 @@
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
  <tr><td>16:00 - 16:50</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="2">待定</td></tr>
  <tr><td colspan="4">晚餐（用餐地点: XXX酒店餐厅）</td></tr>
- <tr><td colspan="4">09月01日&nbsp;(会议地点：金鸡岭校区  10教516室)</td></tr>
+ <tr><td colspan="4">09月01日&nbsp;(会议地点：XXX)</td></tr>
  <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="3">待定</td></tr>
  <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
