--- a/CSACplan.html
+++ b/CSACplan.html
@@ -119,21 +119,21 @@
  <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
  <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td></tr>
  <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="2">待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:30 - 11:20</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="2">待定</td></tr>
+ <tr><td>10:30 - 11:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
  <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
- <tr><td>14:00 - 14:50</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="2">待定</td></tr>
- <tr><td>14:50 - 15:40</td><td>特邀报告（待定）</td><td>待定</td></tr>
+ <tr><td>14:00 - 14:50</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>14:50 - 15:40</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
- <tr><td>16:00 - 16:50</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="2">待定</td></tr>
+ <tr><td>16:00 - 16:50</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
  <tr><td colspan="4">晚餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td colspan="4">09月01日&nbsp;(会议地点：XXX)</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="3">待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:30 - 11:20</td><td>特邀报告（待定）</td><td>待定</td><td rowspan="2">待定</td></tr>
- <tr><td>11:20 - 12:10</td><td>特邀报告（待定）</td><td>待定</td></tr>
+ <tr><td>10:30 - 11:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>11:20 - 12:10</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
  <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
