--- a/CSACplan.html
+++ b/CSACplan.html
@@ -64,7 +64,7 @@
                                     </li>
                                 
                                     <li class="submenu">
-                                           <a href="introduction.html">CSAC会议</a>
+                                           <a href="CSACpage.html">CSAC会议</a>
                                                <ul class="sub">
                                                  <li><a href="CSACpage.html">会议介绍</a></li>
                                                  <li><a href="CSACplan.html">会议日程</a></li>
