--- a/schedule.html
+++ b/schedule.html
@@ -64,11 +64,10 @@
                                     </li>
                                 
                                     <li class="submenu">
-                                           <a href="introduction.html">CSAC会议</a>
-                                             <ul class="sub">
-                                                 <li><a href="#">会议介绍</a></li>
-                                                 <li><a href="#">会议日程</a></li>
-                                                 <li><a href="#">会议注册</a></li>
+                                           <a href="CSACpage.html">CSAC会议</a>
+                                            <li><a href="CSACpage.html">论坛介绍</a></li>
+                                                 <li><a href="CSACplan.html">论坛日程</a></li>
+                                                 <li><a href="CSACregister.html">论坛注册</a></li>
                                              </ul>
                                     </li>
                                 
