--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                                     <li class="submenu">
                                            <a href="CSASpage.html">CSAC会议</a>
                                             <ul class="sub">
-                                                 <li><a href="CSACpage.html">论坛介绍</a></li>
-                                                 <li><a href="CSACplan.html">论坛日程</a></li>
-                                                 <li><a href="CSACregister.html">论坛注册</a></li>
+                                                 <li><a href="CSACpage.html">会议介绍</a></li>
+                                                 <li><a href="CSACplan.html">会议日程</a></li>
+                                                 <li><a href="CSACregister.html">会议注册</a></li>
                                              </ul>
                                     </li>
                                 
