--- a/SHDIregister.html
+++ b/SHDIregister.html
@@ -119,7 +119,7 @@
                         <td colspan="2">注：请参会人员填写发票抬头和税号，打款时备注此会议名称，财务处会开具纸质发票，在报到的时候发给参会人员。已注册的老师，请联系齐老师，咨询发票开取事务。<a href="https://www.wjx.top/jq/36776244.aspx">请点击进入注册</a>。</td>
                     </tr> -->
                     <tr>
-                        <td colspan="2">注：缴费时请您注明以下信息（即单位、姓名和单位税号）</td>
+                        <td colspan="2">注：缴费时请您注明以下信息（即单位、姓名和单位统一社会信用代码）</td>
                     </tr>
                 </tbody>
                 </table>
@@ -138,7 +138,7 @@
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width:60%">&nbsp;&nbsp;论坛合作联系人：</td>
+                            <td style="width:60%">&nbsp;&nbsp;论坛合作联系人:</td>
                             <td>蒋林智</td>
                         </tr>
 <!--                         <tr>
