--- a/SHDIregister.html
+++ b/SHDIregister.html
@@ -138,7 +138,7 @@
                     </caption>
                     <tbody >
                         <tr>
-                            <td style="width:60%">&nbsp;&nbsp;论坛合作联系人:</td>
+                            <td style="width:60%">&nbsp;&nbsp;论坛合作联系:</td>
                             <td>蒋林智</td>
                         </tr>
 <!--                         <tr>
