--- a/CSACpage.html
+++ b/CSACpage.html
@@ -105,13 +105,13 @@
                         刘建伟<br/><br/>
                         <p class="organization">会议组织：<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
-                        <p class="organization">会议承办单位<br/></p>
+                        <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
                         <p class="organization">会议地点<br/></p>
                        北京航空航天大学 杭州研究院（浙江省杭州市滨江区创慧街18号）<br/><br/>
                         <a href="https://map.baidu.com/poi/%E5%8C%97%E8%88%AA%E6%9D%AD%E5%B7%9E%E5%88%9B%E6%96%B0%E7%A0%94%E7%A9%B6%E9%99%A2/@13382279.2894358,3513070.626420232,11.52z?uid=9b7b721e5fe770fc8a36eef9&primaryUid=14371455981175128251&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl">
                             <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
-                        </a>
+                        </a>-->
                     </div>
                 </div>
                 <div id="buttons">
