--- a/SHDIplan.html
+++ b/SHDIplan.html
@@ -31,7 +31,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                        <!--    <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
+                           <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>
                         </div>
                         <div id="navbar-collapse" class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
