--- a/CSACpage.html
+++ b/CSACpage.html
@@ -39,9 +39,9 @@
                                     <li class="submenu">
                                            <a href="SHDIpage.html">SHDI论坛</a>
                                              <ul class="sub">
-                                                 <li><a href="CSACpage.html">论坛介绍</a></li>
-                                                 <li><a href="CSACplan.html">论坛日程</a></li>
-                                                 <li><a href="CSACregister.html">论坛注册</a></li>
+                                                 <li><a href="SHDIpage.html">论坛介绍</a></li>
+                                                 <li><a href="SHDIplan.html">论坛日程</a></li>
+                                                 <li><a href="SHDIregister.html">论坛注册</a></li>
                                              </ul>
                                     </li>
                                 
@@ -89,7 +89,7 @@
             <div class="introdution">
             <div id="theme">
                 <p style="text-indent:2em ">网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。同时，随着量子计算、人工智能、智能驾驶、5G、区块链和边缘计算等新兴学科和技术的快速发展，也为网络空间安全和密码学的发展和研究提供了新的支撑和研究方向。<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与密码学国际研讨会将就以上相关问题，展开探讨和交流。本届会议将于2019年08月31日-2019年09月01日在杭州举行，由北京航空航天大学 网络空间安全学院承办。会议将特邀请国内外的10位著名专家就上述问题给出10个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎高校、研究所和企业界的老师、朋友和研究生等参加会议。
+                    &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与密码学国际研讨会将就以上相关问题，展开探讨和交流。本届会议将于2019年09月21日-2019年09月22日在杭州举行，由北京航空航天大学 网络空间安全学院承办。会议将特邀请国内外的10位著名专家就上述问题给出10个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎高校、研究所和企业界的老师、朋友和研究生等参加会议。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div> 
