--- a/CSACpage.html
+++ b/CSACpage.html
@@ -103,8 +103,10 @@
                         待定<br/><br/>
                          <p class="organization">会议主席：<br/></p>
                         刘建伟<br/><br/>
-                        <p class="organization">会议组织：<br/></p>
+                        <p class="organization">会议程序委员会：<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
+                        关振宇（北京航空航天大学）<br/><br/>
+                        李大伟（北京航空航天大学）<br/><br/>
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
                         <p class="organization">会议地点<br/></p>
