--- a/CSACpage.html
+++ b/CSACpage.html
@@ -102,7 +102,7 @@
                         <p class="organization">会议组委会：(排名不分先后顺序)<br/></p>
                         待定<br/><br/>
                          <p class="organization">会议主席：<br/></p>
-                        刘建伟<br/><br/>
+                        刘建伟（北京航空航天大学）<br/><br/>
                         <p class="organization">会议程序委员会：<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
                         关振宇（北京航空航天大学）<br/><br/>
