--- a/CSACplan.html
+++ b/CSACplan.html
@@ -116,24 +116,26 @@
 <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">注册和报道</th></tr></thead><tbody>
  <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;XXX大酒店大堂</td></tr>
  <tr><td colspan="4">09月21日&nbsp;(会议地点：XXX)</td></tr>
- <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
+ <tr class="tableizer-firstrow"><th>时间</th><th>日程安排</th><th>嘉宾</th><th>主持人</th></tr>
  <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>密码与数学</td><td>冯克勤</td><td>待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:10</td><td>后量子密码学</td><td>待定</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:30 - 11:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>10:30 - 11:20</td><td>DaoLiName－Decentralized Identity as Public Key
+道立名－去中心化的身份即公钥
+</td><td>待定</td><td>毛文波</td></tr>
  <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
- <tr><td>14:00 - 14:50</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
- <tr><td>14:50 - 15:40</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>14:00 - 14:50</td><td>量子通信与量子密码学</td><td>龙桂鲁</td><td>待定</td></tr>
+ <tr><td>14:50 - 15:40</td><td>云数据的密文检索技术</td><td>陈晓峰</td><td>待定</td></tr>
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
- <tr><td>16:00 - 16:50</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>16:00 - 16:50</td><td>特邀报告（待定）</td><td>彭海鹏</td><td>待定</td></tr>
  <tr><td colspan="4">晚餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td colspan="4">09月22日&nbsp;(会议地点：XXX)</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:10</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>密码学发展与未来</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:10</td><td>5G通信与安全</td><td>待定</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:30 - 11:20</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
- <tr><td>11:20 - 12:10</td><td>特邀报告（待定）</td><td>待定</td><td>待定</td></tr>
+ <tr><td>10:30 - 11:20</td><td>人工智能与网络空间安全</td><td>曹珍富</td><td>待定</td></tr>
+ <tr><td>11:20 - 12:10</td><td>人工智能发展与应用</td><td>黄继武</td><td>待定</td></tr>
  <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
