--- a/CSACplan.html
+++ b/CSACplan.html
@@ -123,7 +123,7 @@
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
  <tr><td>10:30 - 11:20</td><td>DaoLiName－Decentralized Identity as Public Key
 道立名－去中心化的身份即公钥
-</td><td>待定</td><td>毛文波</td></tr>
+</td><td>毛文波</td><td>待定</td></tr>
  <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td>14:00 - 14:50</td><td>量子通信与量子密码学</td><td>龙桂鲁</td><td>待定</td></tr>
  <tr><td>14:50 - 15:40</td><td>云数据的密文检索技术</td><td>陈晓峰</td><td>待定</td></tr>
