--- a/CSACplan.html
+++ b/CSACplan.html
@@ -128,7 +128,7 @@
  <tr><td>14:00 - 14:50</td><td>量子通信与量子密码学</td><td>龙桂鲁</td><td>待定</td></tr>
  <tr><td>14:50 - 15:40</td><td>云数据的密文检索技术</td><td>陈晓峰</td><td>待定</td></tr>
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
- <tr><td>16:00 - 16:50</td><td>特邀报告（待定）</td><td>彭海鹏</td><td>待定</td></tr>
+ <tr><td>16:00 - 16:50</td><td>安全通论</td><td>彭海鹏</td><td>待定</td></tr>
  <tr><td colspan="4">晚餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td colspan="4">09月22日&nbsp;(会议地点：XXX)</td></tr>
  <tr><td>&nbsp;8:30 - 9:20</td><td>密码学发展与未来</td><td>待定</td><td>待定</td></tr>
