--- a/CSACplan.html
+++ b/CSACplan.html
@@ -131,7 +131,7 @@
  <tr><td>16:00 - 16:50</td><td>安全通论</td><td>彭海鹏</td><td>待定</td></tr>
  <tr><td colspan="4">晚餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td colspan="4">09月22日&nbsp;(会议地点：XXX)</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>密码学发展与未来</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>密码学发展与未来</td><td>范逸臣</td><td>待定</td></tr>
  <tr><td>&nbsp;9:20 - 10:10</td><td>5G通信与安全</td><td>待定</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
  <tr><td>10:30 - 11:20</td><td>人工智能与网络空间安全</td><td>曹珍富</td><td>待定</td></tr>
