--- a/CSACplan.html
+++ b/CSACplan.html
@@ -135,7 +135,7 @@
  <tr><td>&nbsp;9:20 - 10:10</td><td>5G通信与安全</td><td>待定</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
  <tr><td>10:30 - 11:20</td><td>人工智能与网络空间安全</td><td>曹珍富</td><td>待定</td></tr>
- <tr><td>11:20 - 12:10</td><td>人工智能发展与应用</td><td>黄继武</td><td>待定</td></tr>
+ <tr><td>11:20 - 12:10</td><td>图像信息隐藏与人工智能</td><td>黄继武</td><td>待定</td></tr>
  <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
