--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
            <!--  <p>Digital Future Research Center-数字未来研究院（DFSC）</p>
                 <p>研究院简介：主要从事数字空间领域相关问题的研究，以数学理论为基础，涉及量子、电子、通信、人工智能和数据科学等相关领域。</p>
       -->
-                <p>算法软硬件设计与实现国际论坛-SHDI</p>
-                <p>安全多方计算国际论坛-SMPC</p>
+                <p>算法软硬件设计与实现国际论坛-SHDI <br/>安全多方计算国际论坛-SMPC</p>
                 <p>量子与后量子密码国际论坛-QPQC</p>
                 <p>网络空间安全与应用密码学国际研讨会-CSAC</p>
                 <p>密码与编码国际论坛-CC</p>
