--- a/CSACpage.html
+++ b/CSACpage.html
@@ -103,10 +103,23 @@
                         待定<br/><br/>
                          <p class="organization">会议主席：<br/></p>
                         刘建伟（北京航空航天大学）<br/><br/>
-                        <p class="organization">会议程序委员会：<br/></p>
+                        <p class="organization">会议程序委员会主席：<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
+                        <p class="organization">会议本地程序委员会主席：<br/></p>
                         关振宇（北京航空航天大学）<br/><br/>
                         李大伟（北京航空航天大学）<br/><br/>
+                         <p class="organization">会议程序委员会：<br/></p>
+                        Bo Luo （University of Kansas）<br/><br/>
+                        杜小妮（西北师范大学）<br/><br/>
+                        闫统江（中国石油大学(华东)）<br/><br/>
+                        Fuchun Guo（University of Wollongong）<br/><br/>
+                        Weizhi Meng（Technical University of Denmark）<br/><br/>
+                        张兰（中国科学技术大学）<br/><br/>
+                        李洪伟（电子科技大学）<br/><br/> 
+                        于佳（青岛大学）<br/><br/>
+                        李剑（北京邮电大学）<br/><br/>
+                        丁勇（桂林电子科技大学）<br/><br/>
+
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
                         <p class="organization">会议地点<br/></p>
