--- a/CSACpage.html
+++ b/CSACpage.html
@@ -101,7 +101,7 @@
                     <div id="contents">
                         <p class="organization">会议组委会：(排名不分先后顺序)<br/></p>
                         待定<br/><br/>
-                         <p class="organization">会议主席：<br/></p>
+                         <p class="organization" align="center">会议主席：<br/></p>
                         刘建伟（北京航空航天大学）<br/><br/>
                         <p class="organization">程序委员会主席：<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
