--- a/CSACpage.html
+++ b/CSACpage.html
@@ -103,9 +103,9 @@
                         待定<br/><br/>
                          <p class="organization" >会议主席<br/></p>
                         刘建伟（北京航空航天大学）<br/><br/>
-                        <p class="organization">程序委员会主席<br/></p>
+                        <p class="organization">会议组织和筹备<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
-                         <p class="organization">程序委员会<br/></p>
+                         <p class="organization">会议程序委员会<br/></p>
                         关振宇（北京航空航天大学）<br/><br/>
                         李大伟（北京航空航天大学）<br/><br/>
                         Bo Luo （University of Kansas）<br/><br/>
