--- a/CSACpage.html
+++ b/CSACpage.html
@@ -108,10 +108,10 @@
                          <p class="organization">会议程序委员会<br/></p>
                         关振宇（北京航空航天大学）<br/><br/>
                         李大伟（北京航空航天大学）<br/><br/>
-                        Bo Luo （University of Kansas）<br/><br/>
+                        Bo Luo (University of Kansas)<br/><br/>
                         杜小妮（西北师范大学）<br/><br/>
                         闫统江（中国石油大学(华东)）<br/><br/>
-                        Fuchun Guo（University of Wollongong）<br/><br/>
+                        Fuchun Guo (University of Wollongong) <br/><br/>
                         Weizhi Meng（Technical University of Denmark）<br/><br/>
                         张兰（中国科学技术大学）<br/><br/>
                         李洪伟（电子科技大学）<br/><br/> 
