--- a/CSACpage.html
+++ b/CSACpage.html
@@ -106,18 +106,18 @@
                         <p class="organization">会议组织和筹备<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
                          <p class="organization">会议程序委员会<br/></p>
-                        关振宇（北京航空航天大学）<br/><br/>
-                        李大伟（北京航空航天大学）<br/><br/>
-                        Bo Luo (University of Kansas)<br/><br/>
-                        杜小妮（西北师范大学）<br/><br/>
-                        闫统江（中国石油大学(华东)）<br/><br/>
-                        Fuchun Guo (University of Wollongong) <br/><br/>
-                        Weizhi Meng（Technical University of Denmark）<br/><br/>
-                        张兰（中国科学技术大学）<br/><br/>
-                        李洪伟（电子科技大学）<br/><br/> 
-                        于佳（青岛大学）<br/><br/>
-                        李剑（北京邮电大学）<br/><br/>
-                        丁勇（桂林电子科技大学）<br/><br/>
+                        <p align="center">关振宇（北京航空航天大学）<br/></p>
+                        <p align="center">李大伟（北京航空航天大学）<br/></p>
+                        <p align="center">Bo Luo (University of Kansas)<br/></p>
+                        <p align="center">杜小妮（西北师范大学）<br/></p>
+                        <p align="center">闫统江（中国石油大学(华东)）<br/></p>
+                        <p align="center">Fuchun Guo (University of Wollongong) <br/></p>
+                        <p align="center">Weizhi Meng（Technical University of Denmark）<br/></p>
+                        <p align="center">张兰（中国科学技术大学）<br/></p>
+                        <p align="center">李洪伟（电子科技大学）<br/></p> 
+                        <p align="center">于佳（青岛大学）<br/></p>
+                        <p align="center">李剑（北京邮电大学）<br/></p>
+                        <p align="center">丁勇（桂林电子科技大学）<br/></p>
 
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
