--- a/CSACpage.html
+++ b/CSACpage.html
@@ -99,13 +99,13 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-                        <p class="organization">会议组委会(排名不分先后顺序)<br/></p>
+                        <p align="left">会议组委会(排名不分先后顺序)<br/></p>
                         待定<br/><br/>
-                         <p class="organization" >会议主席<br/></p>
-                        刘建伟（北京航空航天大学）<br/><br/>
-                        <p class="organization">会议组织和筹备<br/></p>
+                         <p align="left" >会议主席<br/></p>
+                        <p align="left"刘建伟（北京航空航天大学）<br/></p>
+                        <p align="left">会议组织和筹备<br/></p>
                         蒋林智（University of Surrey）<br/><br/>
-                         <p class="organization">会议程序委员会<br/></p>
+                         <p align="left">会议程序委员会<br/></p>
                         <p align="left">关振宇（北京航空航天大学）<br/></p>
                         <p align="left">李大伟（北京航空航天大学）<br/></p>
                         <p align="left">Bo Luo (University of Kansas)<br/></p>
