--- a/CSACpage.html
+++ b/CSACpage.html
@@ -104,7 +104,7 @@
                          <p align="left" >会议主席<br/></p>
                         <p align="left">刘建伟（北京航空航天大学）<br/></p>
                         <p align="left">会议组织和筹备<br/></p>
-                        蒋林智（University of Surrey）<br/><br/>
+                         <p align="left">蒋林智（University of Surrey）<br/></p>
                          <p align="left">会议程序委员会<br/></p>
                         <p align="left">关振宇（北京航空航天大学）<br/></p>
                         <p align="left">李大伟（北京航空航天大学）<br/></p>
