--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
            <!--  <p>Digital Future Research Center-数字未来研究院（DFSC）</p>
                 <p>研究院简介：主要从事数字空间领域相关问题的研究，以数学理论为基础，涉及量子、电子、通信、人工智能和数据科学等相关领域。</p>
       -->
-                 <p align="left">算法软硬件设计与实现国际论坛-SHDI <br/></p>
-                 <p align="left">安全多方计算国际论坛-SMPC <br/></p>
-                 <p align="left">量子与后量子密码国际论坛-QPQC <br/></p>
-                 <p align="left">网络空间安全与应用密码学国际研讨会-CSAC <br/></p>
-                 <p align="left">密码与编码国际论坛-CC<br/></p>
+                 <p align="center">算法软硬件设计与实现国际论坛-SHDI <br/></p>
+                 <p align="center">安全多方计算国际论坛-SMPC <br/></p>
+                 <p align="center">量子与后量子密码国际论坛-QPQC <br/></p>
+                 <p align="center">网络空间安全与应用密码学国际研讨会-CSAC <br/></p>
+                 <p align="center">密码与编码国际论坛-CC<br/></p>
                 
 <!--                 <p>安全多方计算国际论坛-2019</p>
                 <p>[1/6/2019 - 2/6/2019]</p>
