--- a/CSACpage.html
+++ b/CSACpage.html
@@ -99,25 +99,25 @@
             <div class="main2">
                 <div id="main2">
                     <div id="contents">
-                        <p align="left">会议组委会(排名不分先后顺序)<br/></p>
+                        <p align="center">会议组委会(排名不分先后顺序)<br/></p>
                         待定<br/><br/>
-                         <p align="left" >会议主席<br/></p>
-                        <p align="left">刘建伟（北京航空航天大学）<br/></p>
-                        <p align="left">会议组织和筹备<br/></p>
-                         <p align="left">蒋林智（University of Surrey）<br/></p>
-                         <p align="left">会议程序委员会<br/></p>
-                        <p align="left">关振宇（北京航空航天大学）<br/></p>
-                        <p align="left">李大伟（北京航空航天大学）<br/></p>
-                        <p align="left">Bo Luo (University of Kansas)<br/></p>
-                        <p align="left">杜小妮（西北师范大学）<br/></p>
-                        <p align="left">闫统江（中国石油大学(华东)）<br/></p>
-                        <p align="left">Fuchun Guo (University of Wollongong) <br/></p>
-                        <p align="left">Weizhi Meng（Technical University of Denmark）<br/></p>
-                        <p align="left">张兰（中国科学技术大学）<br/></p>
-                        <p align="left">李洪伟（电子科技大学）<br/></p> 
-                        <p align="left">于佳（青岛大学）<br/></p>
-                        <p align="left">李剑（北京邮电大学）<br/></p>
-                        <p align="left">丁勇（桂林电子科技大学）<br/></p>
+                         <p align="center" >会议主席<br/></p>
+                        <p align="center">刘建伟（北京航空航天大学）<br/></p>
+                        <p align="center">会议组织和筹备<br/></p>
+                         <p align="center">蒋林智（University of Surrey）<br/></p>
+                         <p align="center">会议程序委员会<br/></p>
+                        <p align="center">关振宇（北京航空航天大学）<br/></p>
+                        <p align="center">李大伟（北京航空航天大学）<br/></p>
+                        <p align="center">Bo Luo (University of Kansas)<br/></p>
+                        <p align="center">杜小妮（西北师范大学）<br/></p>
+                        <p align="center">闫统江（中国石油大学(华东)）<br/></p>
+                        <p align="center">Fuchun Guo (University of Wollongong) <br/></p>
+                        <p align="center">Weizhi Meng（Technical University of Denmark）<br/></p>
+                        <p align="center">张兰（中国科学技术大学）<br/></p>
+                        <p align="center">李洪伟（电子科技大学）<br/></p> 
+                        <p align="center">于佳（青岛大学）<br/></p>
+                        <p align="center">李剑（北京邮电大学）<br/></p>
+                        <p align="center">丁勇（桂林电子科技大学）<br/></p>
 
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
