--- a/CSACpage.html
+++ b/CSACpage.html
@@ -103,7 +103,7 @@
                         待定<br/><br/>
                          <p align="center" >会议主席<br/></p>
                         <p align="center">刘建伟（北京航空航天大学）<br/></p>
-                        <p align="center">会议组织和筹备<br/></p>
+                        <p align="center">会议程序委员会主席<br/></p>
                          <p align="center">蒋林智（University of Surrey）<br/></p>
                          <p align="center">会议程序委员会<br/></p>
                         <p align="center">关振宇（北京航空航天大学）<br/></p>
