--- a/CSACpage.html
+++ b/CSACpage.html
@@ -100,10 +100,10 @@
                 <div id="main2">
                     <div id="contents">
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
-                        来学嘉 王杰  吴文玲 杨义先 温巧燕 谷大武 冯荣权 林东岱 
-戚文峰 黄继武 马建峰 徐茂智 刘胜利 张方国 张福泰  任奎  
-许春香 唐韶华  郑东  王良民  徐秋亮  赵波  吴铤   王美琴  
-翁健  陈晓峰  伍前红 黄欣沂 孔凡玉 吕继强  刘哲  屈龙江 
+                         <p align="center">来学嘉 王杰  吴文玲 杨义先 温巧燕 谷大武 冯荣权 林东岱<br/></p>
+<p align="center">戚文峰 黄继武 马建峰 徐茂智 刘胜利 张方国 张福泰  任奎<br/></p> 
+<p align="center">许春香 唐韶华  郑东  王良民  徐秋亮  赵波  吴铤   王美琴<br/></p> 
+<p align="center">翁健  陈晓峰  伍前红 黄欣沂 孔凡玉 吕继强  刘哲  屈龙江<br/></p>
 <br/><br/>
                          <p align="center" >会议主席<br/></p>
                         <p align="center">刘建伟（北京航空航天大学）<br/></p>
