--- a/CSACpage.html
+++ b/CSACpage.html
@@ -100,10 +100,14 @@
                 <div id="main2">
                     <div id="contents">
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
-                         <p align="center">来学嘉 王杰  吴文玲 杨义先 温巧燕 谷大武 冯荣权 林东岱<br/></p>
-<p align="center">戚文峰 黄继武 马建峰 徐茂智 刘胜利 张方国 张福泰  任奎<br/></p> 
-<p align="center">许春香 唐韶华  郑东  王良民  徐秋亮  赵波  吴铤   王美琴<br/></p> 
-<p align="center">翁健  陈晓峰  伍前红 黄欣沂 孔凡玉 吕继强  刘哲  屈龙江<br/></p>
+                         <p align="center">来学嘉 王杰  陈克非 吴文玲 杨义先 温巧燕 谷大武 冯荣权<br/></p>
+<p align="center">林东岱 戚文峰 黄继武 马建峰 徐茂智 刘胜利 张方国 张福泰<br/></p> 
+<p align="center">李晖   任奎  许春香 周世杰 唐韶华  郑东  王良民  徐秋亮 <br/></p> 
+<p align="center">赵波   吴铤  王美琴  翁健  陈晓峰  伍前红 黄欣沂 孔凡玉 <br/></p>
+<p align="center">吕继强 屈龙江 张新鹏 阚海斌  陆荣幸 许春根 陈立全  刘哲 <br/></p>
+<p align="center">唐小虎 贾春福 刘冬梅 陈光喜 唐元生 韩战钢  李树钧 邢朝平 <br/></p>
+                    
+
 <br/><br/>
                          <p align="center" >会议主席<br/></p>
                         <p align="center">刘建伟（北京航空航天大学）<br/></p>
