--- a/CSACpage.html
+++ b/CSACpage.html
@@ -114,18 +114,10 @@
                         <p align="center">会议程序委员会主席<br/></p>
                          <p align="center">蒋林智（University of Surrey）<br/></p>
                          <p align="center">会议程序委员会<br/></p>
-                        <p align="center">关振宇（北京航空航天大学）<br/></p>
-                        <p align="center">李大伟（北京航空航天大学）<br/></p>
-                        <p align="center">Bo Luo (University of Kansas)<br/></p>
-                        <p align="center">杜小妮（西北师范大学）<br/></p>
-                        <p align="center">闫统江（中国石油大学(华东)）<br/></p>
-                        <p align="center">Fuchun Guo (University of Wollongong) <br/></p>
-                        <p align="center">Weizhi Meng（Technical University of Denmark）<br/></p>
-                        <p align="center">张兰（中国科学技术大学）<br/></p>
-                        <p align="center">李洪伟（电子科技大学）<br/></p> 
-                        <p align="center">于佳（青岛大学）<br/></p>
-                        <p align="center">李剑（北京邮电大学）<br/></p>
-                        <p align="center">丁勇（桂林电子科技大学）<br/></p>
+                        
+                        
+                        <p align="center">罗博 杜小妮 闫统江 郭福春 Weizhi Meng  张兰  李洪伟   李剑<br/></p>  
+<p align="center">于佳  丁勇  刘哲理 田海博    黎琳     王高丽 潘彦斌  付安民<br/></p>
 
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
