--- a/CSACpage.html
+++ b/CSACpage.html
@@ -88,8 +88,8 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
-                <p style="text-indent:2em ">网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。同时，随着量子计算、人工智能、智能驾驶、5G、区块链和边缘计算等新兴学科和技术的快速发展，也为网络空间安全和密码学的发展和研究提供了新的支撑和研究方向。<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与密码学国际研讨会将就以上相关问题，展开探讨和交流。本届会议将于2019年09月21日-2019年09月22日在杭州举行，由北京航空航天大学 网络空间安全学院承办。会议将特邀请国内外的10位著名专家就上述问题给出10个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎高校、研究所和企业界的老师、朋友和研究生等参加会议。
+                <p style="text-indent:2em ">国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
+                    &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2019年09月21日-2019年09月22日在杭州举行，由北京航空航天大学 网络空间安全学院承办。会议将邀请海内外在相关领域研究成果杰出的10位教授就相关问题给出10个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div> 
@@ -100,23 +100,22 @@
                 <div id="main2">
                     <div id="contents">
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
-                         <p align="center">来学嘉 王杰  陈克非 吴文玲 杨义先 温巧燕 谷大武 冯荣权<br/></p>
-<p align="center">林东岱 戚文峰 黄继武 马建峰 徐茂智 刘胜利 张方国 张福泰<br/></p> 
-<p align="center">李晖   任奎  许春香 周世杰 唐韶华  郑东  王良民  徐秋亮 <br/></p> 
+                         <p align="center">来学嘉  王杰  裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱 李晖  毛文波<br/></p>
+<p align="center">冯荣权 戚文峰 张卫明 马建峰 徐茂智 刘胜利 张方国 徐秋亮 张福泰 李凤华 杨波<br/></p> 
+<p align="center">任奎   胡磊  许春香 唐韶华  郑东  王良民 李丽香  赵波   吴铤  祝烈煌 路荣幸 <br/></p> 
 <p align="center">赵波   吴铤  王美琴  翁健  陈晓峰  伍前红 黄欣沂 孔凡玉 <br/></p>
-<p align="center">吕继强 屈龙江 张新鹏 阚海斌  陆荣幸 许春根 陈立全  刘哲 <br/></p>
-<p align="center">唐小虎 贾春福 刘冬梅 陈光喜 唐元生 韩战钢  李树钧 邢朝平 <br/></p>
-                    
+                        <p align="center">王美琴  翁健  陈晓峰 伍前红 黄欣沂 孔凡玉 吕继强  刘哲  屈龙江 石文昌  禹勇 <br/></p>
 
 <br/><br/>
                          <p align="center" >会议主席<br/></p>
                         <p align="center">刘建伟（北京航空航天大学）<br/></p>
                         <p align="center">会议程序委员会主席<br/></p>
                         <p align="center">蒋林智（University of Surrey）<br/></p>
-
+                         <p align="center">会议程序委员会副主席<br/></p>
+                        <p align="center">关振宇 李大伟 （北京航空航天大学）<br/></p>
                          <p align="center">会议程序委员会<br/></p>
-                        <p align="center">罗博 杜小妮 闫统江 郭福春 Weizhi Meng  张兰  李洪伟   李剑<br/></p>  
-<p align="center">于佳  丁勇  刘哲理 田海博    黎琳     王高丽 潘彦斌  付安民<br/></p>
+                        <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
+<p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
 
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
