--- a/CSACpage.html
+++ b/CSACpage.html
@@ -116,6 +116,14 @@
                          <p align="center">会议程序委员会<br/></p>
                         <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
 <p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
+                        
+<p align="center">会议举办时间：2019年09月21日-09月22日。<br/></p>
+<p align="center">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
+<p align="center">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。注册费缴纳：户名：杭州畅游会展服务有限公司；开户行：杭州联合银行祥符支行；账号：2010 0015 9260 415。缴费时请您注明以下信息：单位、姓名和单位统一社会信用代码。<br/></p>
+<p align="center">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
+<p align="center">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
+<p align="center">会议协办单位：杭州安恒信息技术股份有限公司、公交云和e签宝。<br/></p>
+
 
                         <!-- <p class="organization">会议承办单位<br/></p>
                         北京航空航天大学 网络空间安全学院<br/><br/>
