--- a/CSACplan.html
+++ b/CSACplan.html
@@ -115,28 +115,29 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">注册和报道</th></tr></thead><tbody>
  <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;XXX大酒店大堂</td></tr>
- <tr><td colspan="4">09月21日&nbsp;(会议地点：XXX)</td></tr>
+ <tr><td colspan="4">09月21日&nbsp;(会议地点：北京航空航天大学 杭州研究院 报告厅)</td></tr>
  <tr class="tableizer-firstrow"><th>时间</th><th>日程安排</th><th>嘉宾</th><th>主持人</th></tr>
  <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>待定</td><td>待定</td><td>待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:10</td><td>后量子密码学</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>N/A</td><td>待定</td><td>待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:10</td><td>轻量级密码算法及其应用</td><td>陈恭亮</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:30 - 11:20</td><td>DaoLiName－Decentralized Identity as Public Key
-道立名－去中心化的身份即公钥
-</td><td>毛文波</td><td>待定</td></tr>
- <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
- <tr><td>14:00 - 14:50</td><td>量子通信与量子密码学</td><td>龙桂鲁</td><td>待定</td></tr>
- <tr><td>14:50 - 15:40</td><td>云数据的密文检索技术</td><td>陈晓峰</td><td>待定</td></tr>
+ <tr><td>10:30 - 11:20</td><td>A Proof-of-Luck Security Model for Blockchain Layer 1</td><td>毛文波</td><td>待定</td></tr>
+ <tr><td colspan="4">午餐</td></tr>
+<tr><td>11:20 - 11:40</td><td>移动应用数据保护的一种实践</td><td>李卫明</td><td>待定</td></tr>
+ <tr><td>14:00 - 14:50</td><td>深度学习与图像信息隐藏--一点认识</td><td>黄继武</td><td>待定</td></tr>
+ <tr><td>14:50 - 15:40</td><td>人工智能驱动的网络空间内容安全</td><td>操晓春</td><td>待定</td></tr>
  <tr><td>15:40 - 16:00</td><td colspan="3">茶歇</td></tr>
- <tr><td>16:00 - 16:50</td><td>安全通论</td><td>彭海鹏</td><td>待定</td></tr>
- <tr><td colspan="4">晚餐（用餐地点: XXX酒店餐厅）</td></tr>
- <tr><td colspan="4">09月22日&nbsp;(会议地点：XXX)</td></tr>
- <tr><td>&nbsp;8:30 - 9:20</td><td>5G通信与安全</td><td>待定</td><td>待定</td></tr>
- <tr><td>&nbsp;9:20 - 10:10</td><td>一个新的格陷门函数及密码应用</td><td>邢朝平</td><td>待定</td></tr>
+ <tr><td>16:00 - 16:50</td><td>A brief survey on secure multiparty computation</td><td>邢朝平</td><td>待定</td></tr>
+<tr><td>16:50 - 17:10</td><td>大数据安全与隐私保护</td><td>李彦宾</td><td>待定</td></tr>
+<tr><td>17:10 - 17:30</td><td>密码学的行业应用</td><td>程亮</td><td>待定</td></tr>
+ <tr><td colspan="4">晚餐</td></tr>
+ <tr><td colspan="4">09月22日&nbsp;(会议地点：北京航空航天大学 杭州研究院 报告厅)</td></tr>
+ <tr><td>&nbsp;8:30 - 9:20</td><td>芯片安全 安全之本</td><td>乌力吉</td><td>待定</td></tr>
+ <tr><td>&nbsp;9:20 - 10:10</td><td>Quantum Secure Direct Communication: Sending Secrets Without Encryption </td><td>龙桂鲁</td><td>待定</td></tr>
  <tr><td>10:10 - 10:30</td><td colspan="3">茶歇</td></tr>
- <tr><td>10:30 - 11:20</td><td>人工智能与网络空间安全</td><td>曹珍富</td><td>待定</td></tr>
- <tr><td>11:20 - 12:10</td><td>图像信息隐藏与人工智能</td><td>黄继武</td><td>待定</td></tr>
- <tr><td colspan="4">午餐（用餐地点: XXX酒店餐厅）</td></tr>
+ <tr><td>10:30 - 11:20</td><td>后量子密码：面向新一代公钥密码算法标准</td><td>张锐</td><td>待定</td></tr>
+ <tr><td>11:20 - 12:10</td><td>Hacker Psychology(杨义先教授专著)</td><td>彭海鹏</td><td>待定</td></tr>
+ <tr><td colspan="4">午餐</td></tr>
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
 	    </br></br>
