--- a/CSACplan.html
+++ b/CSACplan.html
@@ -114,7 +114,7 @@
 </style>
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">注册和报道</th></tr></thead><tbody>
- <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;XXX大酒店大堂</td></tr>
+ <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;杭州中赢铂金皇冠假日酒店一楼大堂</td></tr>
  <tr><td colspan="4">09月21日&nbsp;(会议地点：北京航空航天大学 杭州研究院 报告厅)</td></tr>
  <tr class="tableizer-firstrow"><th>时间</th><th>日程安排</th><th>嘉宾</th><th>主持人</th></tr>
  <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">开幕 合影</td></tr>
