--- a/CSACpage.html
+++ b/CSACpage.html
@@ -100,7 +100,7 @@
                 <div id="main2">
                     <div id="contents">
                         <p align="center">会议组委会(排名不分先后顺序)<br/></p>
-                         <p align="center">来学嘉  王杰  裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱 李晖  毛文波<br/></p>
+                         <p align="center">来学嘉""王杰  裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱 李晖  毛文波<br/></p>
 <p align="center">冯荣权 戚文峰 张卫明 马建峰 徐茂智 刘胜利 张方国 徐秋亮 张福泰 李凤华 ""杨波<br/></p> 
 <p align="center">""任奎  ""胡磊  许春香 唐韶华  郑东  王良民 李丽香  赵波   吴铤  祝烈煌 路荣幸 <br/></p> 
 <p align="center">赵波   吴铤  王美琴  翁健  陈晓峰  伍前红 黄欣沂 孔凡玉 <br/></p>
