--- a/CSACpage.html
+++ b/CSACpage.html
@@ -124,6 +124,10 @@
 <p align="center">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
 <p align="center">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
 <p align="center">会议协办单位：杭州安恒信息技术股份有限公司、公交云和e签宝。<br/></p>
+                        <p class="organization">论坛地点<br/></p>
+                        北京航空航天大学 杭州研究院 报告厅（杭州中赢铂金皇冠假日酒店一楼大堂）<br/><br/>
+                        <a href="https://map.baidu.com/search/%E6%A1%82%E6%9E%97%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6(%E9%87%91%E9%B8%A1%E5%B2%AD%E6%A0%A1%E5%8C%BA)/@12283415.670365062,2892976.509075,18.02z?querytype=s&da_src=shareurl&wd=%E6%A1%82%E6%9E%97%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6(%E9%87%91%E9%B8%A1%E5%B2%AD%E6%A0%A1%E5%8C%BA)&c=142&src=0&pn=0&sug=0&l=18&b=(12282586.42812713,2892526.34900298;12284244.912602993,2893426.6691470197)&from=webmap&biz_forward=%7B%22scaler%22:1,%22styles%22:%22pl%22%7D&device_ratio=1">
+                            <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i>
 
 
                         <!-- <p class="organization">会议承办单位<br/></p>
